# bytewax-azure-ai-search

./: .gitignore  README.md  justfile  mypy.ini  pyproject.toml
.github/workflows/: CI.yml
docs/: conf.py  index.md
examples/: README.md  connection.ipynb  connection.py  dataflow.py  indexing.py
examples/azure-openai-embedding/: dataflow.py
pytests/: __init__.py  test_bytewax-azure-ai-search.py
requirements/: build-py3.10.txt  build-py3.11.txt  build-py3.12.txt  build-py3.8.txt  build-py3.9.txt  dev.in  dev.txt  lib-py3.10.txt  lib-py3.11.txt  lib-py3.12.txt  lib-py3.8.txt  lib-py3.9.txt
src/bytewax/azure_ai_search/: __init__.py
src/bytewax/bytewax-azure-ai-search/: __init__.py  connection.py  partition.py  sink.py
src/bytewax/bytewax_azure_ai_search/: __init__.py  operators.py
